tests/invalid/ListEmpty_Invalid_1.whiley
function f(int x) -> int:
    return 1

method main():
    f([])
